# Portfolio_Java

./: .gitignore  LICENSE  README.md  generate_charts.py  make_demos.py  manage.py
.github/workflows/: ci.yml
Backend de IA NO-Framework/: README.md
Backend de IA NO-Framework/java-backend/src/main/java/ia/: IARustAdapter.java  JobManager.java  Main.java
Backend de IA NO-Framework/python-train/: train.py
Backend de IA NO-Framework/rust-infer/: Cargo.toml
Backend de IA NO-Framework/rust-infer/src/: core.rs  lib.rs
Motor de Datos de Alta Frecuencia/: README.md
Motor de Datos de Alta Frecuencia/java-core/src/main/java/hf/: HFEngine.java  HFMain.java  (+1 more)
Motor de Datos de Alta Frecuencia/rust-core/: Cargo.toml
Motor de Datos de Alta Frecuencia/rust-core/src/: core.rs  lib.rs
Sistema Operativo de Aplicación (Java)/: README.md
Sistema Operativo de Aplicación (Java)/rust-core/: Cargo.toml
Sistema Operativo de Aplicación (Java)/rust-core/src/: core.rs  lib.rs
benchmarks/: benchmark_runner.py
docs/demos/: README.md
plugin-platform/: README.md
plugin-platform/plugins-python/: hello.py
plugin-platform/plugins-rust/: Cargo.toml
plugin-platform/plugins-rust/src/: core.rs  lib.rs
runtime/: README.md
runtime/rust-core/: Cargo.toml
runtime/rust-core/src/: core.rs  lib.rs
sim-framework/: README.md
sim-framework/rust-core/: Cargo.toml
sim-framework/rust-core/src/: lib.rs  sim.rs
toolchain-gamedev/: README.md
toolchain-gamedev/python-tools/: build.py
toolchain-gamedev/rust-core/: Cargo.toml
toolchain-gamedev/rust-core/src/: core.rs  lib.rs
(+17 files in other folders)
