[package]
name = "os_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "os_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "os-ipc"
path = "src/bin/os_ipc.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
once_cell = "1.19"
base64 = "0.22"
