[package]
name = "asset_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "asset_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "asset-ipc"
path = "src/bin/asset_ipc.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
base64 = "0.22"
flate2 = "1.0"
sha2 = "0.10"
